Fixing static frontend link paths

--- a/static/local/ext/pug/components/_header.pug
+++ b/static/local/ext/pug/components/_header.pug
@@ -7,7 +7,7 @@ nav.header-navbar.navbar-expand-md.navbar.navbar-with-menu.navbar-without-dd-arr
             i.ft-menu.font-large-1
         li.nav-item
           a.navbar-brand(href='index.html')
-            img.brand-logo(alt='modern admin logo' src='../../../app-assets/images/logo/logo.png')
+            img.brand-logo(alt='modern admin logo' src='ext/app-assets/images/logo/logo.png')
             h3.brand-text Modern
         li.nav-item.d-md-none
           a.nav-link.open-navbar-container(data-toggle='collapse' data-target='#navbar-mobile')
@@ -176,7 +176,7 @@ nav.header-navbar.navbar-expand-md.navbar.navbar-with-menu.navbar-without-dd-arr
                   .media
                     .media-left
                       span.avatar.avatar-sm.avatar-online.rounded-circle
-                        img(src='../../../app-assets/images/portrait/small/avatar-s-19.png' alt='avatar')
+                        img(src='ext/app-assets/images/portrait/small/avatar-s-19.png' alt='avatar')
                         i
                     .media-body
                       h6.media-heading Margaret Govan
@@ -187,7 +187,7 @@ nav.header-navbar.navbar-expand-md.navbar.navbar-with-menu.navbar-without-dd-arr
                   .media
                     .media-left
                       span.avatar.avatar-sm.avatar-busy.rounded-circle
-                        img(src='../../../app-assets/images/portrait/small/avatar-s-2.png' alt='avatar')
+                        img(src='ext/app-assets/images/portrait/small/avatar-s-2.png' alt='avatar')
                         i
                     .media-body
                       h6.media-heading Bret Lezama
@@ -198,7 +198,7 @@ nav.header-navbar.navbar-expand-md.navbar.navbar-with-menu.navbar-without-dd-arr
                   .media
                     .media-left
                       span.avatar.avatar-sm.avatar-online.rounded-circle
-                        img(src='../../../app-assets/images/portrait/small/avatar-s-3.png' alt='avatar')
+                        img(src='ext/app-assets/images/portrait/small/avatar-s-3.png' alt='avatar')
                         i
                     .media-body
                       h6.media-heading Carie Berra
@@ -209,7 +209,7 @@ nav.header-navbar.navbar-expand-md.navbar.navbar-with-menu.navbar-without-dd-arr
                   .media
                     .media-left
                       span.avatar.avatar-sm.avatar-away.rounded-circle
-                        img(src='../../../app-assets/images/portrait/small/avatar-s-6.png' alt='avatar')
+                        img(src='ext/app-assets/images/portrait/small/avatar-s-6.png' alt='avatar')
                         i
                     .media-body
                       h6.media-heading Eric Alsobrook
@@ -222,7 +222,7 @@ nav.header-navbar.navbar-expand-md.navbar.navbar-with-menu.navbar-without-dd-arr
             a.dropdown-toggle.nav-link.dropdown-user-link(href='#' data-toggle='dropdown')
               span.mr-1.user-name.text-bold-700 John Doe
               span.avatar.avatar-online
-                img(src='../../../app-assets/images/portrait/small/avatar-s-19.png' alt='avatar')
+                img(src='ext/app-assets/images/portrait/small/avatar-s-19.png' alt='avatar')
                 i
             .dropdown-menu.dropdown-menu-right
               a.dropdown-item(href='#')
