--- a/static/local/ext/pug/settings/_link-imports.pug
+++ b/static/local/ext/pug/settings/_link-imports.pug
@@ -1,15 +1,16 @@
 
-link(rel='apple-touch-icon' href='../../../app-assets/images/ico/apple-icon-120.png')
-link(rel='shortcut icon' type='image/x-icon' href='../../../app-assets/images/ico/favicon.ico')
+link(rel='apple-touch-icon' href='ext/app-assets/images/ico/apple-icon-120.png')
+link(rel='shortcut icon' type='image/x-icon' href='ext/app-assets/images/ico/favicon.ico')
 link(href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i%7CQuicksand:300,400,500,700' rel='stylesheet')
-link(rel='stylesheet' type='text/css' href='../../../app-assets/fonts/material-icons/material-icons.min.css')
-link(rel='stylesheet' type='text/css' href='../../../app-assets/vendors/css/material-vendors.min.css')
-link(rel='stylesheet' type='text/css' href='../../../app-assets/vendors/css/charts/chartist.css')
-link(rel='stylesheet' type='text/css' href='../../../app-assets/vendors/css/charts/chartist-plugin-tooltip.css')
-link(rel='stylesheet' type='text/css' href='../../../app-assets/css/material.min.css')
-link(rel='stylesheet' type='text/css' href='../../../app-assets/css/components.min.css')
-link(rel='stylesheet' type='text/css' href='../../../app-assets/css/bootstrap-extended.min.css')
-link(rel='stylesheet' type='text/css' href='../../../app-assets/css/material-extended.min.css')
-link(rel='stylesheet' type='text/css' href='../../../app-assets/css/material-colors.min.css')
-link(rel='stylesheet' type='text/css' href='../../../assets/css/style.css')
+link(rel='stylesheet' type='text/css' href='ext/app-assets/fonts/material-icons/material-icons.min.css')
+link(rel='stylesheet' type='text/css' href='ext/app-assets/vendors/css/material-vendors.min.css')
+link(rel='stylesheet' type='text/css' href='ext/app-assets/vendors/css/charts/chartist.css')
+link(rel='stylesheet' type='text/css' href='ext/app-assets/vendors/css/charts/chartist-plugin-tooltip.css')
+link(rel='stylesheet' type='text/css' href='ext/app-assets/css/material.min.css')
+link(rel='stylesheet' type='text/css' href='ext/app-assets/css/components.min.css')
+link(rel='stylesheet' type='text/css' href='ext/app-assets/css/bootstrap-extended.min.css')
+link(rel='stylesheet' type='text/css' href='ext/app-assets/css/material-extended.min.css')
+link(rel='stylesheet' type='text/css' href='ext/app-assets/css/material-colors.min.css')
+link(rel='stylesheet' type='text/css' href='ext/assets/css/style.css')
+link(href="https://fonts.googleapis.com/icon?family=Material+Icons", rel="stylesheet")
   
