--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -9,8 +9,8 @@ head
   title
     | Dashboard Support - Modern Admin - Clean Bootstrap 4 Dashboard HTML Template + Bitcoin Dashboard
   include settings/_link-imports.pug
-  link(rel='stylesheet' type='text/css' href='../../../app-assets/css/core/menu/menu-types/material-horizontal-menu.min.css')
-  link(rel='stylesheet' type='text/css' href='../../../app-assets/css/pages/dashboard-support.min.css')
+  link(rel='stylesheet' type='text/css' href='ext/app-assets/css/core/menu/menu-types/material-horizontal-menu.min.css')
+  link(rel='stylesheet' type='text/css' href='ext/app-assets/css/pages/dashboard-support.min.css')
   
 include components/_header.pug
 include components/_navbar.pug
@@ -91,7 +91,7 @@ include components/_navbar.pug
                 hr
                 .row
                   .col-2
-                    img(src='../../../app-assets/images/icons/card-1.png' alt='avatar' width='50')
+                    img(src='ext/app-assets/images/icons/card-1.png' alt='avatar' width='50')
                   .col-8
                     h6 REDQTEAM-XXX-5994
                     p EX 04/2022
@@ -100,7 +100,7 @@ include components/_navbar.pug
                       i.ft-x
                 .row.mt-2
                   .col-2
-                    img(src='../../../app-assets/images/icons/card-2.png' alt='avatar' width='50')
+                    img(src='ext/app-assets/images/icons/card-2.png' alt='avatar' width='50')
                   .col-8
                     h6 REDQTEAM-XXX-5834
                     p EX 12/2020
@@ -115,7 +115,7 @@ include components/_navbar.pug
                 hr
                 .row
                   .col-2
-                    img(src='../../../app-assets/images/icons/mail-chimp.png' alt='avatar' width='50')
+                    img(src='ext/app-assets/images/icons/mail-chimp.png' alt='avatar' width='50')
                   .col-7
                     h6
                       | MailChilp 
@@ -126,7 +126,7 @@ include components/_navbar.pug
                     p.info invoice
                 .row.mt-2
                   .col-2
-                    img(src='../../../app-assets/images/icons/google.png' alt='avatar' width='50')
+                    img(src='ext/app-assets/images/icons/google.png' alt='avatar' width='50')
                   .col-7
                     h6
                       | MailChilp 
@@ -155,7 +155,7 @@ include components/_navbar.pug
                       tr
                         td.text-center
                           span.avatar.avatar-busy
-                            img(src='../../../app-assets/images/portrait/small/avatar-s-8.png' alt='avatar' data-toggle='tooltip' data-placement='right' title='Mary Salazar')
+                            img(src='ext/app-assets/images/portrait/small/avatar-s-8.png' alt='avatar' data-toggle='tooltip' data-placement='right' title='Mary Salazar')
                             i
                         td
                           a.text-bold-600(href='#') Modern admin - Responsive Bootstrap 4 Admin Template
@@ -171,7 +171,7 @@ include components/_navbar.pug
                       tr
                         td.text-center
                           span.avatar.avatar-online
-                            img(src='../../../app-assets/images/portrait/small/avatar-s-6.png' alt='avatar' data-placement='right' title='Nicole Barrett')
+                            img(src='ext/app-assets/images/portrait/small/avatar-s-6.png' alt='avatar' data-placement='right' title='Nicole Barrett')
                             i
                         td
                           a.text-bold-600(href='#') Complete Support page design
@@ -183,7 +183,7 @@ include components/_navbar.pug
                       tr
                         td.text-center
                           span.avatar.avatar-off
-                            img(src='../../../app-assets/images/portrait/small/avatar-s-7.png' alt='avatar' data-placement='right' title='Jason Robertson')
+                            img(src='ext/app-assets/images/portrait/small/avatar-s-7.png' alt='avatar' data-placement='right' title='Jason Robertson')
                             i
                         td
                           a.text-bold-600(href='#') Create App Landing page
@@ -199,7 +199,7 @@ include components/_navbar.pug
                       tr
                         td.text-center
                           span.avatar.avatar-busy
-                            img(src='../../../app-assets/images/portrait/small/avatar-s-7.png' alt='avatar' data-toggle='tooltip' data-placement='right' title='Willie Sanchez')
+                            img(src='ext/app-assets/images/portrait/small/avatar-s-7.png' alt='avatar' data-toggle='tooltip' data-placement='right' title='Willie Sanchez')
                             i
                         td
                           a.text-bold-600(href='#') UI Design for the CCC
@@ -235,49 +235,49 @@ include components/_navbar.pug
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='../../../app-assets/images/icons/app-1.png' alt='avatar')
+                          img.box-shadow-2(src='ext/app-assets/images/icons/app-1.png' alt='avatar')
                       td.text-truncate Convex
                       td
                         span.badge.badge-warning 3
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='../../../app-assets/images/icons/app-2.png' alt='avatar')
+                          img.box-shadow-2(src='ext/app-assets/images/icons/app-2.png' alt='avatar')
                       td.text-truncate Materialize
                       td
                         span.badge.badge-success 3
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='../../../app-assets/images/icons/app-3.png' alt='avatar')
+                          img.box-shadow-2(src='ext/app-assets/images/icons/app-3.png' alt='avatar')
                       td.text-truncate Crypto ICO
                       td
                         span.badge.badge-danger 5
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='../../../app-assets/images/icons/app-4.png' alt='avatar')
+                          img.box-shadow-2(src='ext/app-assets/images/icons/app-4.png' alt='avatar')
                       td.text-truncate Modern Admin
                       td
                         span.badge.badge-info 2
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='../../../app-assets/images/icons/app-5.png' alt='avatar')
+                          img.box-shadow-2(src='ext/app-assets/images/icons/app-5.png' alt='avatar')
                       td.text-truncate Apex Angular
                       td
                         span.badge.badge-warning 4
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='../../../app-assets/images/icons/app-6.png' alt='avatar')
+                          img.box-shadow-2(src='ext/app-assets/images/icons/app-6.png' alt='avatar')
                       td.text-truncate Apex HTML
                       td
                         span.badge.badge-info 1
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='../../../app-assets/images/icons/app-1.png' alt='avatar')
+                          img.box-shadow-2(src='ext/app-assets/images/icons/app-1.png' alt='avatar')
                       td.text-truncate Convex
                       td
                         span.badge.badge-warning 3
@@ -289,5 +289,5 @@ include components/_navbar.pug
 
 include components/_footer.pug
 include settings/_js-imports.pug
-script(src='../../../app-assets/js/scripts/pages/material-app.min.js')
-script(src='../../../app-assets/js/scripts/pages/dashboard-support.min.js')
+script(src='ext/app-assets/js/scripts/pages/material-app.min.js')
+script(src='ext/app-assets/js/scripts/pages/dashboard-support.min.js')
