--- a/static/local/ext/pug/settings/_js-imports.pug
+++ b/static/local/ext/pug/settings/_js-imports.pug
@@ -1,8 +1,8 @@
-script(src='../../../app-assets/vendors/js/material-vendors.min.js')
-script(src='../../../app-assets/vendors/js/ui/jquery.sticky.js')
-script(src='../../../app-assets/vendors/js/charts/chartist.min.js')
-script(src='../../../app-assets/vendors/js/charts/chartist-plugin-tooltip.min.js')
-script(src='../../../app-assets/js/core/app-menu.min.js')
-script(src='../../../app-assets/js/core/app.min.js')
-script(src='../../../app-assets/js/scripts/customizer.min.js')
-script(src='../../../app-assets/js/scripts/footer.min.js')
+script(src='ext/app-assets/vendors/js/material-vendors.min.js')
+script(src='ext/app-assets/vendors/js/ui/jquery.sticky.js')
+script(src='ext/app-assets/vendors/js/charts/chartist.min.js')
+script(src='ext/app-assets/vendors/js/charts/chartist-plugin-tooltip.min.js')
+script(src='ext/app-assets/js/core/app-menu.min.js')
+script(src='ext/app-assets/js/core/app.min.js')
+script(src='ext/app-assets/js/scripts/customizer.min.js')
+script(src='ext/app-assets/js/scripts/footer.min.js')
