--- a/static/local/ext/pug/components/_navbar.pug
+++ b/static/local/ext/pug/components/_navbar.pug
@@ -1,10 +1,10 @@
-.header-navbar.navbar-expand-sm.navbar.navbar-horizontal.navbar-fixed.navbar-dark.navbar-without-dd-arrow.navbar-shadow(role='navigation' data-menu='menu-wrapper')
+//.header-navbar.navbar-expand-sm.navbar.navbar-horizontal.navbar-fixed.navbar-dark.navbar-without-dd-arrow.navbar-shadow(role='navigation' data-menu='menu-wrapper')
   .navbar-container.main-menu-content(data-menu='menu-container')
     ul#main-menu-navigation.nav.navbar-nav(data-menu='menu-navigation')
       li.nav-item.active
-        a.nav-link(href='index.html')
-          i.material-icons settings_input_svideo
-          span Support Dashboard
+        a.nav-link#navbar-link-home(href='')
+          i.material-icons
+          span
       li.nav-item
         a.nav-link(href='support-tickets.html')
           i.material-icons input
