--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -15,7 +15,7 @@ head
 include components/_header.pug
 include components/_navbar.pug
 
-.app-content.content
+.app-content.content(sisgepac-page="index")
   .content-header.row
   .content-overlay
   .content-wrapper
