--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -6,11 +6,11 @@ head
   meta(name='description' content='Modern admin is super flexible, powerful, clean & modern responsive bootstrap 4 admin template with unlimited possibilities with bitcoin dashboard.')
   meta(name='keywords' content='admin template, modern admin template, dashboard template, flat admin template, responsive admin template, web app, crypto dashboard, bitcoin dashboard')
   meta(name='author' content='PIXINVENT')
-  title
-    | SISGEPAC - Sistema de Geração de Páginas para Congressos e Eventos
+  title SISGEPAC - Sistema de Geração de Páginas para Congressos e Eventos
   include settings/_link-imports.pug
-  link(rel='stylesheet' type='text/css' href='ext/app-assets/css/core/menu/menu-types/material-horizontal-menu.min.css')
-  link(rel='stylesheet' type='text/css' href='ext/app-assets/css/pages/dashboard-support.min.css')
+  link(rel='stylesheet', type='text/css', href='/local/ext/app-assets/css/core/menu/menu-types/material-horizontal-menu.min.css')
+  link(rel='stylesheet', type='text/css', href='/local/ext/app-assets/css/pages/dashboard-support.min.css')
+  link(rel="stylesheet", type="text/css", href="/local/ext/app-assets/css/plugins/calendars/clndr.min.css")
   
 include components/_header.pug
 include components/_navbar.pug
@@ -22,7 +22,7 @@ include components/_navbar.pug
     .content-body
       .row.card-icons
           .col-12
-            .card.bg-gradient-x-cyan
+            .card.bg-gradient-x-blue
               .card-content
                 .card-body
                   .row
@@ -65,6 +65,120 @@ include components/_navbar.pug
                         .progress-bar.bg-white(role="progressbar", style="width: 60%", aria-valuenow="60", aria-valuemin="0", aria-valuemax="100")
       // Payment Methods & Purchase History
       .row.match-height
+        .col-xl-6.col-lg-12.col-sm-12
+              .card
+                  .card-header
+                      h4.card-title Default Setup
+                  .card-body
+                      p.card-text This is the most basic eample with html template and events to be shown on the calendar.</p>
+                      #clndr-default.overflow-hidden.bg-grey.bg-lighten-3
+                        .clndr
+                          .clndr-controls
+                              .clndr-previous-button &lt;
+                              .clndr-next-button &gt;
+                              .current-month January 2020
+                          .clndr-grid
+                            .days-of-the-week.clearfix  
+                              .header-day S
+                              .header-day M
+                              .header-day T
+                              .header-day W
+                              .header-day T
+                              .header-day F
+                              .header-day S
+                            .days
+                              .day.past.adjacent-month.last-month.calendar-day-2019-12-29.calendar-dow-0
+                                span.day-number 29
+                          
+                              .day.past.adjacent-month.last-month.calendar-day-2019-12-30.calendar-dow-1
+                                span.day-number 30
+                          
+                              .day.past.adjacent-month.last-month.calendar-day-2019-12-31.calendar-dow-2
+                                span.day-number 31
+                          
+                              .day.past.calendar-day-2020-01-01.calendar-dow-3
+                                span.day-number 1
+                          
+                              .day.past.calendar-day-2020-01-02.calendar-dow-4 
+                                span.day-number 2
+                              .day.past.calendar-day-2020-01-03.calendar-dow-5 
+                                span.day-number 3
+                              .day.past.calendar-day-2020-01-04.calendar-dow-6
+                                span.day-number 4
+                              .day.past.calendar-day-2020-01-05.calendar-dow-0 
+                                span.day-number 5
+                              .day.past.calendar-day-2020-01-06.calendar-dow-1 
+                                span.day-number 6
+                              .day.past.calendar-day-2020-01-07.calendar-dow-2
+                                span.day-number 7
+                              .day.past.calendar-day-2020-01-08.calendar-dow-3 
+                                span.day-number 8
+                              .day.past.calendar-day-2020-01-09.calendar-dow-4 
+                                span.day-number 9
+                              .day.past.event.calendar-day-2020-01-10.calendar-dow-5
+                                span.day-number 10
+                              .day.past.calendar-day-2020-01-11.calendar-dow-6 
+                                span.day-number 11
+                              .day.past.calendar-day-2020-01-12.calendar-dow-0 
+                                span.day-number 12
+                              .day.past.calendar-day-2020-01-13.calendar-dow-1
+                                span.day-number 13
+                              .day.past.calendar-day-2020-01-14.calendar-dow-2
+                                span.day-number 14
+                              .day.past.calendar-day-2020-01-15.calendar-dow-3
+                                span.day-number 15
+                              .day.past.calendar-day-2020-01-16.calendar-dow-4
+                                span.day-number 16
+                              .day.past.calendar-day-2020-01-17.calendar-dow-5
+                                span.day-number 17
+                              .day.past.calendar-day-2020-01-18.calendar-dow-6
+                                span.day-number 18
+                              .day.past.event.calendar-day-2020-01-19.calendar-dow-0
+                                span.day-number 19
+                              .day.today.calendar-day-2020-01-20.calendar-dow-1
+                                span.day-number 20
+                              .day.calendar-day-2020-01-21.calendar-dow-2
+                                span.day-number 21
+                              .day.calendar-day-2020-01-22.calendar-dow-3
+                                span.day-number 22
+                              .day.event.calendar-day-2020-01-23.calendar-dow-4
+                                span.day-number 23
+                              .day.calendar-day-2020-01-24.calendar-dow-5 
+                                span.day-number 24
+                              .day.calendar-day-2020-01-25.calendar-dow-6
+                                span.day-number 25
+                              .day.calendar-day-2020-01-26.calendar-dow-0
+                                span.day-number 26
+                              .day.calendar-day-2020-01-27.calendar-dow-1 
+                                span.day-number 27
+                              .day.calendar-day-2020-01-28.calendar-dow-2 
+                                span.day-number 28
+                              .day.calendar-day-2020-01-29.calendar-dow-3
+                                span.day-number 29
+                              .day.calendar-day-2020-01-30.calendar-dow-4
+                                span.day-number 30
+                              .day.calendar-day-2020-01-31.calendar-dow-5
+                                span.day-number 31
+                              .day.adjacent-month.next-month.calendar-day-2020-02-01.calendar-dow-6
+                                span.day-number 1
+                          
+                          .event-listing
+                            .event-listing-title Event this month
+                              .event-item.font-small-3
+                                .event-item-day.font-small-2 2020-01-10
+                                .event-item-name.text-bold-600.Persian Kitten Auction
+                                .event-item-location Center for Beautiful Cats
+                          
+                              .event-item.font-small-3
+                                .event-item-day.font-small-2 2020-01-19
+                                .event-item-name.text-bold-600 Cat Frisbee
+                                .event-item-location Jefferson Park
+                                  
+                              .event-item.font-small-3
+                                .event-item-day.font-small-2 2020-01-23
+                                .event-item-name.text-bold-600 Kitten Demonstration
+                                .event-item-location Center for Beautiful Cats
+      .row.match-height
         .col-md-6
           .card.payment
             .card-content
@@ -73,7 +187,7 @@ include components/_navbar.pug
                 hr
                 .row
                   .col-2
-                    img(src='ext/app-assets/images/icons/card-1.png' alt='avatar' width='50')
+                    img(src='/local/ext/app-assets/images/icons/card-1.png' alt='avatar' width='50')
                   .col-8
                     h6 REDQTEAM-XXX-5994
                     p EX 04/2022
@@ -82,7 +196,7 @@ include components/_navbar.pug
                       i.ft-x
                 .row.mt-2
                   .col-2
-                    img(src='ext/app-assets/images/icons/card-2.png' alt='avatar' width='50')
+                    img(src='/local/ext/app-assets/images/icons/card-2.png' alt='avatar' width='50')
                   .col-8
                     h6 REDQTEAM-XXX-5834
                     p EX 12/2020
@@ -97,7 +211,7 @@ include components/_navbar.pug
                 hr
                 .row
                   .col-2
-                    img(src='ext/app-assets/images/icons/mail-chimp.png' alt='avatar' width='50')
+                    img(src='/local/ext/app-assets/images/icons/mail-chimp.png' alt='avatar' width='50')
                   .col-7
                     h6
                       | MailChilp 
@@ -108,7 +222,7 @@ include components/_navbar.pug
                     p.info invoice
                 .row.mt-2
                   .col-2
-                    img(src='ext/app-assets/images/icons/google.png' alt='avatar' width='50')
+                    img(src='/local/ext/app-assets/images/icons/google.png' alt='avatar' width='50')
                   .col-7
                     h6
                       | MailChilp 
@@ -137,7 +251,7 @@ include components/_navbar.pug
                       tr
                         td.text-center
                           span.avatar.avatar-busy
-                            img(src='ext/app-assets/images/portrait/small/avatar-s-8.png' alt='avatar' data-toggle='tooltip' data-placement='right' title='Mary Salazar')
+                            img(src='/local/ext/app-assets/images/portrait/small/avatar-s-8.png' alt='avatar' data-toggle='tooltip' data-placement='right' title='Mary Salazar')
                             i
                         td
                           a.text-bold-600(href='#') Modern admin - Responsive Bootstrap 4 Admin Template
@@ -153,7 +267,7 @@ include components/_navbar.pug
                       tr
                         td.text-center
                           span.avatar.avatar-online
-                            img(src='ext/app-assets/images/portrait/small/avatar-s-6.png' alt='avatar' data-placement='right' title='Nicole Barrett')
+                            img(src='/local/ext/app-assets/images/portrait/small/avatar-s-6.png' alt='avatar' data-placement='right' title='Nicole Barrett')
                             i
                         td
                           a.text-bold-600(href='#') Complete Support page design
@@ -165,7 +279,7 @@ include components/_navbar.pug
                       tr
                         td.text-center
                           span.avatar.avatar-off
-                            img(src='ext/app-assets/images/portrait/small/avatar-s-7.png' alt='avatar' data-placement='right' title='Jason Robertson')
+                            img(src='/local/ext/app-assets/images/portrait/small/avatar-s-7.png' alt='avatar' data-placement='right' title='Jason Robertson')
                             i
                         td
                           a.text-bold-600(href='#') Create App Landing page
@@ -181,7 +295,7 @@ include components/_navbar.pug
                       tr
                         td.text-center
                           span.avatar.avatar-busy
-                            img(src='ext/app-assets/images/portrait/small/avatar-s-7.png' alt='avatar' data-toggle='tooltip' data-placement='right' title='Willie Sanchez')
+                            img(src='/local/ext/app-assets/images/portrait/small/avatar-s-7.png' alt='avatar' data-toggle='tooltip' data-placement='right' title='Willie Sanchez')
                             i
                         td
                           a.text-bold-600(href='#') UI Design for the CCC
@@ -217,49 +331,49 @@ include components/_navbar.pug
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='ext/app-assets/images/icons/app-1.png' alt='avatar')
+                          img.box-shadow-2(src='/local/ext/app-assets/images/icons/app-1.png' alt='avatar')
                       td.text-truncate Convex
                       td
                         span.badge.badge-warning 3
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='ext/app-assets/images/icons/app-2.png' alt='avatar')
+                          img.box-shadow-2(src='/local/ext/app-assets/images/icons/app-2.png' alt='avatar')
                       td.text-truncate Materialize
                       td
                         span.badge.badge-success 3
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='ext/app-assets/images/icons/app-3.png' alt='avatar')
+                          img.box-shadow-2(src='/local/ext/app-assets/images/icons/app-3.png' alt='avatar')
                       td.text-truncate Crypto ICO
                       td
                         span.badge.badge-danger 5
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='ext/app-assets/images/icons/app-4.png' alt='avatar')
+                          img.box-shadow-2(src='/local/ext/app-assets/images/icons/app-4.png' alt='avatar')
                       td.text-truncate Modern Admin
                       td
                         span.badge.badge-info 2
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='ext/app-assets/images/icons/app-5.png' alt='avatar')
+                          img.box-shadow-2(src='/local/ext/app-assets/images/icons/app-5.png' alt='avatar')
                       td.text-truncate Apex Angular
                       td
                         span.badge.badge-warning 4
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='ext/app-assets/images/icons/app-6.png' alt='avatar')
+                          img.box-shadow-2(src='/local/ext/app-assets/images/icons/app-6.png' alt='avatar')
                       td.text-truncate Apex HTML
                       td
                         span.badge.badge-info 1
                     tr
                       td.text-truncate
                         span.avatar.avatar-xs
-                          img.box-shadow-2(src='ext/app-assets/images/icons/app-1.png' alt='avatar')
+                          img.box-shadow-2(src='/local/ext/app-assets/images/icons/app-1.png' alt='avatar')
                       td.text-truncate Convex
                       td
                         span.badge.badge-warning 3
@@ -271,5 +385,5 @@ include components/_navbar.pug
 
 include components/_footer.pug
 include settings/_js-imports.pug
-script(src='ext/app-assets/js/scripts/pages/material-app.min.js')
-script(src='ext/app-assets/js/scripts/pages/dashboard-support.min.js')
+script(src='/local/ext/app-assets/js/scripts/pages/material-app.min.js')
+script(src='/local/ext/app-assets/js/scripts/pages/dashboard-support.min.js')
