Changelog data write working.

--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -378,11 +378,7 @@ include components/_navbar.pug
                       td
                         span.badge.badge-warning 3
 
-.buy-now
-  a.btn.btn-info.btn-glow.round.px-2(href='https://1.envato.market/modern_admin' target='_blank') Buy Now
-.sidenav-overlay
-.drag-target
-
+include components/_publish-button.pug
 include components/_footer.pug
 include settings/_js-imports.pug
 script(src='/local/ext/app-assets/js/scripts/pages/material-app.min.js')
