--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -14,6 +14,7 @@ head
   
 include components/_header.pug
 include components/_navbar.pug
+include components/modals/_event-settings.pug
 
 .app-content.content(sisgepac-page="index")
   .content-header.row
