Creating model layer

--- a/static/local/ext/pug/components/_header.pug
+++ b/static/local/ext/pug/components/_header.pug
@@ -22,10 +22,10 @@ nav.header-navbar.navbar-expand-md.navbar.navbar-with-menu.navbar-without-dd-arr
 						a.dropdown-toggle.nav-link#navbar-link-navigator(href='#' data-toggle='dropdown')
 							i.material-icons menu
 						ul.mega-dropdown-menu.dropdown-menu.row.p-1
-							li.col-md-4.bg-mega.p-2
-								h3.text-white.mb-1.font-weight-bold#navbar-about-title
+							li.col-md-4.bg-dark.p-2
+								h3.pink.mb-1.font-weight-bold#navbar-about-title
 								p.text-white.line-height-2#navbar-about-text
-								button.btn.btn-outline-white#navbar-about-button
+								button.btn.btn-outline-pink.text-pink#navbar-about-button
 							li.col-md-8.px-2
 								h6.font-weight-bold.font-medium-2.ml-1#navbar-control-panel
 								ul.row.mt-2
