--- a/static/local/ext/pug/components/modals/_event-settings.pug
+++ b/static/local/ext/pug/components/modals/_event-settings.pug
@@ -44,4 +44,4 @@
                             i.la.la-lock.font-large-1.line-height-1.text-muted.icon-align
                 .modal-footer
                     //input.btn.btn-outline-secondary.btn-lg(type="reset", data-dismiss="modal", value="cancelar")
-                    input.btn.btn-outline-primary.btn-lg(type="submit", value="Continuar")
+                    button.btn.btn-outline-primary.btn-lg#event-settings-modal-add-button(type="button")
