--- a/static/local/ext/pug/index.pug
+++ b/static/local/ext/pug/index.pug
@@ -23,7 +23,7 @@ include components/modals/_event-settings.pug
     .content-body
       .row.card-icons
           .col-12
-            .card.bg-gradient-x-blue
+            .card.bg-pink
               .card-content
                 .card-body
                   .row
@@ -31,7 +31,7 @@ include components/modals/_event-settings.pug
                       .media.d-flex.p-2
                         .align-self-center
                           i.icon-camera.font-large-1.blue-grey.d-block.mb-1
-                          span.text-muted.text-right Products
+                          span.text-muted.text-right.white O quanto minha página está configurada
                         .media-body.text-right
                           span.font-large-2.text-bold-300.white 579
                       .progress.mt-1.mb-0(style="height: 7px;")
@@ -41,7 +41,7 @@ include components/modals/_event-settings.pug
                       .media.d-flex.p-2
                         .align-self-center
                           i.icon-user.font-large-1.blue-grey.d-block.mb-1
-                          span.text-muted.text-right New Clients
+                          span.text-muted.text-right.white New Clients
                         .media-body.text-right
                           span.font-large-2.text-bold-300.white 423
                       .progress.mt-1.mb-0(style="height: 7px;")
@@ -50,7 +50,7 @@ include components/modals/_event-settings.pug
                       .media.d-flex.p-2
                         .align-self-center
                           i.icon-bulb.font-large-1.blue-grey.d-block.mb-1
-                          span.text-muted.text-right Conversion Rate
+                          span.text-muted.text-right.white Conversion Rate
                         .media-body.text-right
                           span.font-large-2.text-bold-300.white 61%
                       .progress.mt-1.mb-0(style="height: 7px;")
@@ -59,7 +59,7 @@ include components/modals/_event-settings.pug
                       .media.d-flex.p-2
                         .align-self-center
                           i.icon-wallet.font-large-1.blue-grey.d-block.mb-1
-                          span.text-muted.text-right Sales
+                          span.text-muted.text-right.white Sales
                         .media-body.text-right
                           span.font-large-2.text-bold-300.white $687
                       .progress.mt-1.mb-0(style="height: 7px;")
